<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_result_champ1"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:contentDescription="@string/Result_Champ1"
        app:srcCompat="@drawable/fnatic_logo" />

    <TextView
        android:id="@+id/txt_result_pseudo1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:paddingLeft="8dp"
        android:text="@string/Result_Pseudo1"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/txt_result_pseudo2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:paddingRight="8dp"
        android:text="@string/Result_Pseudo2"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <ImageView
        android:id="@+id/img_result_champ2"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:contentDescription="@string/Result_Champ2"
        app:srcCompat="@drawable/fnatic_logo" />
</LinearLayout>